--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Design.pro Portal{% endblock %}</title>
     {% load static %}
-    <!-- Пример подключения стилей -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <!-- Можно добавить Bootstrap или другие фреймворки -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+    
 </head>
 <body>
 <header>
@@ -17,8 +15,8 @@
             <li><a href="{% url 'home' %}">Главная</a></li>
             {% if user.is_authenticated %}
                 {% if user.is_staff %}
-                    <li><a href="{% url 'admin_dashboard' %}">Админ-панель</a></li>
-                    <li><a href="{% url 'manage_categories' %}">Управление категориями</a></li>
+                    <li><a href="{% url 'home' %}">Админ-панель</a></li>
+                    <li><a href="{% url 'home' %}">Управление категориями</a></li>
                 {% else %}
                     <li><a href="{% url 'user_dashboard' %}">Личный кабинет</a></li>
                     <li><a href="{% url 'create_request' %}">Создать заявку</a></li>
@@ -26,8 +24,7 @@
                 <li>
                     <form method="post" action="{% url 'logout' %}">
                         {% csrf_token %}
-                        <button type="submit"
-                                style="background: none; border: none; padding: 0; text-decoration: underline; cursor: pointer; color: blue;">
+                        <button type="submit" class="logoutBase">
                             Выход ({{ user.username }})
                         </button>
                     </form>
@@ -39,7 +36,6 @@
         </ul>
     </nav>
 </header>
-
 <main>
     <!-- Отображение сообщений Django -->
     {% if messages %}
@@ -51,14 +47,11 @@
             {% endfor %}
         </div>
     {% endif %}
-
     {% block content %}
     {% endblock %}
 </main>
-
 <footer>
     <p>&copy; {% now "Y" %} Design.pro. Все права защищены.</p>
 </footer>
-<!-- <script src="{% static 'js/main.js' %}"></script> -->
 </body>
 </html>
