--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,8 +1,10 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Регистрация</title>
+    <link rel="stylesheet" href="{% static 'css/form_register.css' %}">
 </head>
 <body>
     <h2>Регистрация</h2>
