Сделал авторизованному пользователю создать запрос и удалить свой запрос до рассмотрения дизайнерами таблицу пользовательских запросов.

--- a/templates/main_app/home.html
+++ b/templates/main_app/home.html
@@ -33,8 +33,8 @@
             <p><a href="{% url 'home' %}">Перейти в админ-панель</a></p>
             <p><a href="{% url 'home' %}">Управление категориями</a></p>
         {% else %}
-            <p><a href="{% url 'home' %}">Перейти в ваш личный кабинет</a></p>
-            <p><a href="{% url 'home' %}">Создать новую заявку</a></p>
+            <p><a href="{% url 'user_dashboard' %}">Перейти в ваш личный кабинет</a></p>
+            <p><a href="{% url 'create_request' %}">Создать новую заявку</a></p>
         {% endif %}
     {% else %}
         <p><a href="{% url 'login' %}">Войдите</a>, чтобы создать заявку или посмотреть свои.</p>
