--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,44 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+
+.wrapper {
+    width: 95%;
+    margin: auto;
+}
+header {
+    background-color: cornflowerblue;
+}
+header > nav {
+    display: flex;
+    height: 75px;
+    margin: auto;
+    justify-content: space-around;
+    align-content: center;
+    flex-wrap: wrap;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    gap:50px;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 45px;
+    justify-content: space-around;
+    align-content: space-around;
+    flex-wrap: wrap;
+}
+
+
+
+
 .logoutBase {
     background: none;
     border: none;
@@ -6,15 +47,15 @@
     cursor: pointer;
     color: blue;
 }
-/*li {*/
-/*    list-style-type: none;*/
-/*}*/
-/*a {*/
-/*    text-decoration: none;*/
-/*    color: #383838;*/
-/*}*/
-/*form > p {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    width: 250px;*/
-/*}*/
+li {
+    list-style-type: none;
+}
+a,
+.logoutBase{
+    text-decoration: none;
+    color: #6cd554;
+}
+a:hover,
+.logoutBase:hover{
+    text-decoration: underline;
+}
