--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,14 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Вход</title>
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body>
-    <h2>Вход</h2>
+    <div class="form-login">
+       <h2>Вход</h2>
     <form method="post">
         {% csrf_token %}
         <p>
@@ -27,6 +30,7 @@
         <button type="submit">Войти</button>
     </form>
 
-    <p>Нет аккаунта? <a href="{% url 'register' %}">Зарегистрироваться</a></p>
+    <p>Нет аккаунта? <a href="{% url 'register' %}">Зарегистрироваться</a></p> 
+    </div>
 </body>
 </html>
